update cod and image

--- a/BS4_chinatimes.ipynb
+++ b/BS4_chinatimes.ipynb
@@ -2,23 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "馬英九台北市長政績如何？資料一攤開酸民全傻了 - 政治\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014001824-260407?ctrack=mo_main_hot_p01\n",
+      "\n",
+      "罷韓後高雄變冷清？他「1張空拍圖」曝現況 網大驚 - 政治\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201013005450-260407?ctrack=mo_main_hot_p02\n",
+      "\n",
+      "獨／囂張罰不怕？「路霸水果攤」佔斑馬線網全怒 北投分局回應了 - 生活\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014003881-260405?ctrack=mo_main_hot_p03\n",
+      "\n",
+      "韓國瑜手上握有「最強血滴子」？軍校校友會理事長不藏了 - 政治\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014002371-260407?ctrack=mo_main_hot_p04\n",
+      "\n",
+      "2020美大選》最新民調：拜登領先川普17百分點 川普最自豪政績也輸 - 美大選\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014003231-260408?ctrack=mo_main_hot_p05\n",
+      "\n",
+      "得知韓國瑜確定被罷免 李四川立刻做了這件事 - 政治\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014001381-260407?ctrack=mo_main_hot_p06\n",
+      "\n",
+      "林子祥73歲近況曝光 生日同框愛妻葉蒨文「竟像父女」 - 娛樂\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201013003240-260404?ctrack=mo_main_hot_p07\n",
+      "\n",
+      "各校社團來表現 竹縣府辦蓄勢待發show\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004502-260421?ctrack=mo_main_rtime_p01\n",
+      "\n",
+      "重陽將至 苗栗縣長徐耀昌慰問百歲人瑞\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004478-260421?ctrack=mo_main_rtime_p02\n",
+      "\n",
+      "防逃再升級 科技設備監控\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004508-260402?ctrack=mo_main_rtime_p03\n",
+      "\n",
+      "台北也有牛奶湖？北投驚現大量乳白色溫泉水\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004504-260405?ctrack=mo_main_rtime_p04\n",
+      "\n",
+      "張玉嬿後悔參加《同學會》 驚爆「前世」陌生又熟悉\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004466-260404?ctrack=mo_main_rtime_p05\n",
+      "\n",
+      "川普不是穩輸？ 資深媒體人嘆：美大選也太難猜\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004468-260407?ctrack=mo_main_rtime_p06\n",
+      "\n",
+      "援交正妹換衣中要求錢放信箱 2男乖乖照辦人財兩失\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004463-260402?ctrack=mo_main_rtime_p07\n",
+      "\n",
+      "美豬聽證會玩俄羅斯方塊被抓包 綠委：無腦提案玩遊戲剛好而已\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004446-260407?ctrack=mo_main_rtime_p08\n",
+      "\n",
+      "預言川普將大敗 沈富雄很無奈：好多川粉來罵我\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004437-260407?ctrack=mo_main_rtime_p09\n",
+      "\n",
+      "股匯齊跌 新台幣連二貶\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201014004465-260410?ctrack=mo_main_rtime_p10\n",
+      "\n",
+      "信義房屋獲天下企業公民獎大型企業前三強 社會參與分...\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200904004695-260410?chdtv\n",
+      "\n",
+      "人才培育兼重專業與品德 信義房屋屢獲國內外CSR獎肯定\n",
+      "網址： https://www.chinatimes.com/realtimenews/20201003000013-260410\n",
+      "\n",
+      "信義房屋「信義徵幸福」短片網路票選 人氣最高可得1萬...\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200806003809-260410?chdtv\n",
+      "\n",
+      "響應環保、支持小農 信義房屋普渡送平安米為社區祈福\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200908001699-260410\n",
+      "\n",
+      "旺House》 房市真的回溫了！內政部鐵證曝光\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200825005901-260410\n",
+      "\n",
+      "旺House》 電商衝擊！投資億元店面下場超慘\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200825005000-260410\n",
+      "\n",
+      "旺House》【崴爺愛看房】捷運公園宅潛力股！移居、宜...\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200825000013-260410\n",
+      "\n",
+      "旺House》必選「合雄5號花園」，超值入主桃園司法特區\n",
+      "網址： https://www.chinatimes.com/realtimenews/20200825001596-260410\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "url = 'https://dct.ntcu.edu.tw/news.php'\n",
+    "url = 'https://www.chinatimes.com/'\n",
     "r = requests.get(url)\n",
     "\n",
     "soup = BeautifulSoup(r.text, \"html.parser\")\n",
     "\n",
-    "titles = soup.find_all('a')\n",
-    "for title in titles\n",
-    "print('網址：')\n",
+    "titles = soup.find_all(\"h4\", class_=\"title\")\n",
     "\n",
     "\n",
+    "for title in titles:\n",
+    "    print(title.select_one(\"a\").getText())\n",
+    "    print('網址：',title.select_one(\"a\").get(\"href\"))\n",
+    "    print()\n",
+    "    \n",
     "\n"
    ]
   },
